docs: Update author information in composer.json.

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "GladeHQ",
-            "email": "hello@gladehq.com"
+            "name": "Dulitha Rajapaksha",
+            "email": "dulithamahishka94@gmail.com"
         }
     ],
     "require": {
