--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "php": "^8.2",
         "illuminate/database": "^10.0|^11.0",
         "illuminate/events": "^10.0|^11.0",
+        "illuminate/http": "^10.0|^11.0",
+        "illuminate/routing": "^10.0|^11.0",
         "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
