refactor: Add EventLog factory, extract test fixtures, dynamic threshold label
Add EventLogFactory with slow(), withSideEffects(), childOf(), and
withException() states. Extract inline test classes (CircularObject,
TestModel, TrackableOrder, OrderPlacedEvent, SimpleEvent) to dedicated
fixture files. Make slow-event label in index view read from config.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "autoload": {
         "psr-4": {
-            "GladeHQ\\LaravelEventLens\\": "src/"
+            "GladeHQ\\LaravelEventLens\\": "src/",
+            "GladeHQ\\LaravelEventLens\\Database\\": "database/"
         }
     },
     "autoload-dev": {
